fix: dark mode validations (#147)
* fix: dark mode validations

* test: update snapshots

--- a/src/__stories__/_styles.scss
+++ b/src/__stories__/_styles.scss
@@ -6,7 +6,3 @@
   'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   border: 1px dotted #bbb; // to visualize component boundaries
 }
-
-#root > div > div > div {
-  background-color: #f8f8fb; // to visualize component boundaries
-}
